Fix: squash last 15 commits
Fix: .header-nav__link:before animation

Fix: clearfix on header

Fix: move footer styles in css file

Fix: html font-size style

Fix: styles for * selector

Fix: bg animation for side-nav__link

Fix: wrap phone and email with a tag and add styles for it

Fix: tabs

Fix: tabs

Fix: fallback fonts

Fix: tr padding

Fix: box sizing for all elements

Fix: add h* tag for artircles

Fix: nav-link before scaleX

Fix: nav__link hover opacity

--- a/homeworks/ilya-ischenko/03-html-css/1.Float/styles.css
+++ b/homeworks/ilya-ischenko/03-html-css/1.Float/styles.css
@@ -4,21 +4,24 @@
     --gray: #f1f1f1;
 }
 
-html {
-    font-size: 15px;
-}
-
 body {
     margin: 0;
     padding: 0;
 }
 
-
-*,
+p,
+ul,
+ol,
+h1,h2,h3,h4,h5,h6,
+hr,
 ::after,
 ::before {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+* {
     box-sizing: border-box;
 }
 
@@ -85,13 +88,13 @@ a {
     width: 100%;
     height: 2px;
     background: #000;
-    transform: scale(0);
+    transform: scaleX(0);
     transform-origin: center;
     transition: transform .2s linear;
 }
 
 .header-nav__link:hover:before {
-    transform: scale(1);
+    transform: scaleX(1);
 }
 
 /* ASIDE ===== */
@@ -103,18 +106,30 @@ aside {
 }
 
 .aside-nav__link {
+    position: relative;
     display: block;
     margin-bottom: 5px;
     padding: 5px;
-    background: var(--gray);
-    border-radius: 4px;
     font-size: 20px;
     color: #000;
-    transition: opacity .2s linear;
 }
 
-.aside-nav__link:hover {
-    opacity: .8;
+.aside-nav__link::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: var(--gray);
+    z-index: -1;
+    border-radius: 4px;
+    transition: opacity .1s linear;
+}
+
+.aside-nav__link:hover::before {
+    opacity: .6;
 }
 
 /* CONTENT ===== */
@@ -166,4 +181,9 @@ main {
     margin-right: 10px;
 }
 
+/* ABOUT ===== */
+
+footer {
+    margin-top: 20px;
+}
 
